# toit-partition-table-esp32

./: .gitignore  CMakeLists.txt  Makefile  README.md  package.yaml
.github/workflows/: ci.yml
src/: otadata.toit  partition_table.toit
tests/: CMakeLists.txt  cvs-test.toit  package.yaml
tools/: gitversion.cmake  toit.cmake
